--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Umair Ahmed | Developer Portfolio</title>
+    <title>Umair Ahmed | Personal Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
